force-app/main/default/objects/Lead_Class_Scoring__c/Lead_Class_Scoring__c.object-meta.xml
<CustomObject>
    <label>Lead and IM Class mapping</label>
    <nameField>
        <displayFormat>LM - {0000000}</displayFormat>
        <label>Lead  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead and IM Class mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>