force-app/main/default/objects/Lead_Class_Scoring__c/fields/Budget_Counter__c.field-meta.xml
<CustomField>
    <fullName>Budget_Counter__c</fullName>
    <label>Budget Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>