force-app/main/default/objects/Lead_Class_Scoring__c/fields/Counter_Limit__c.field-meta.xml
<CustomField>
    <fullName>Counter_Limit__c</fullName>
    <label>Counter Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>