force-app/main/default/objects/Lead_Class_Scoring__c/fields/discovery_Campaign_List__c.field-meta.xml
<CustomField>
    <fullName>discovery_Campaign_List__c</fullName>
    <label>discovery Campaign List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>