force-app/main/default/objects/Lead_Class_Scoring__c/fields/Facebook_Ad_Campaign_List__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Ad_Campaign_List__c</fullName>
    <label>Facebook Ad Campaign List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>