force-app/main/default/objects/Lead_Class_Scoring__c/fields/IM_Quality__c.field-meta.xml
<CustomField>
    <fullName>IM_Quality__c</fullName>
    <label>IM Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>