force-app/main/default/objects/Lead_Class_Scoring__c/fields/Lead_and_Signup_List__c.field-meta.xml
<CustomField>
    <fullName>Lead_and_Signup_List__c</fullName>
    <label>LeadSource and Signup List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Estimate Flow</fullName>
            </value>
            <value>
                <fullName>google seo</fullName>
            </value>
            <value>
                <fullName>bing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>