force-app/main/default/objects/Lead_Class_Scoring__c/fields/Lead_Signup_and_Pincode_List__c.field-meta.xml
<CustomField>
    <fullName>Lead_Signup_and_Pincode_List__c</fullName>
    <label>LeadSource Signup and Pincode List</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>