force-app/main/default/objects/Lead_Class_Scoring__c/fields/Lead_Source_List__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_List__c</fullName>
    <label>Lead Source List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>bing</fullName>
            </value>
            <value>
                <fullName>sfleadgen</fullName>
            </value>
            <value>
                <fullName>Toll-free</fullName>
            </value>
            <value>
                <fullName>local</fullName>
            </value>
            <value>
                <fullName>Facebook Ad</fullName>
            </value>
            <value>
                <fullName>google seo</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>instagram</fullName>
            </value>
            <value>
                <fullName>HomeBliss</fullName>
            </value>
            <value>
                <fullName>yahoo seo</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>bing seo</fullName>
            </value>
            <value>
                <fullName>an</fullName>
            </value>
            <value>
                <fullName>ig</fullName>
            </value>
            <value>
                <fullName>Customer experience</fullName>
            </value>
            <value>
                <fullName>taboola</fullName>
            </value>
            <value>
                <fullName>HomeBliss_FB</fullName>
            </value>
            <value>
                <fullName>Quikr</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>FB Lead Form</fullName>
            </value>
            <value>
                <fullName>LinkedIn Lead Form</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Offline Ads</fullName>
            </value>
            <value>
                <fullName>Showroom Order</fullName>
            </value>
            <value>
                <fullName>Affiliates</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Facebook Post</fullName>
            </value>
            <value>
                <fullName>HomeBliss_PaidSearch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>