force-app/main/default/objects/Lead_Class_Scoring__c/fields/Lead_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Verification_Status__c</fullName>
    <label>Lead Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>