force-app/main/default/objects/Lead_Class_Scoring__c/fields/Lead_Verification_Status_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Verification_Status_Score__c</fullName>
    <label>Lead Verification Status Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>