force-app/main/default/objects/Lead_Class_Scoring__c/fields/LeadSource_and_OTP_List__c.field-meta.xml
<CustomField>
    <fullName>LeadSource_and_OTP_List__c</fullName>
    <label>LeadSource and OTP List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Facebook Ad</fullName>
            </value>
            <value>
                <fullName>FB Lead Form</fullName>
            </value>
            <value>
                <fullName>google seo</fullName>
            </value>
            <value>
                <fullName>yahoo seo</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>bing seo</fullName>
            </value>
            <value>
                <fullName>an</fullName>
            </value>
            <value>
                <fullName>ig</fullName>
            </value>
            <value>
                <fullName>Affiliates</fullName>
            </value>
            <value>
                <fullName>bing</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Facebook Post</fullName>
            </value>
            <value>
                <fullName>HomeBliss</fullName>
            </value>
            <value>
                <fullName>HomeBliss_FB</fullName>
            </value>
            <value>
                <fullName>HomeBliss_PaidSearch</fullName>
            </value>
            <value>
                <fullName>instagram</fullName>
            </value>
            <value>
                <fullName>local</fullName>
            </value>
            <value>
                <fullName>organic</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>performance_max</fullName>
            </value>
            <value>
                <fullName>print</fullName>
            </value>
            <value>
                <fullName>taboola</fullName>
            </value>
            <value>
                <fullName>webengage</fullName>
            </value>
            <value>
                <fullName>youtube</fullName>
            </value>
            <value>
                <fullName>facebookpost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>