force-app/main/default/objects/Lead_Class_Scoring__c/fields/LeadSource_Pincode_OTP_List__c.field-meta.xml
<CustomField>
    <fullName>LeadSource_Pincode_OTP_List__c</fullName>
    <label>LeadSource Pincode OTP List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>