force-app/main/default/objects/Lead_Class_Scoring__c/fields/Mapping_Name__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Name__c</fullName>
    <label>Mapping Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>