force-app/main/default/objects/Lead_Class_Scoring__c/fields/Offline_Ads_Included_Cities__c.field-meta.xml
<CustomField>
    <fullName>Offline_Ads_Included_Cities__c</fullName>
    <label>Offline Ads Included Cities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>Kochi</fullName>
            </value>
            <value>
                <fullName>Salem</fullName>
            </value>
            <value>
                <fullName>Trichy</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>