force-app/main/default/objects/Lead_Class_Scoring__c/fields/Offline_Assignment_Enable__c.field-meta.xml
<CustomField>
    <fullName>Offline_Assignment_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offline Assignment Enable</label>
    <type>Checkbox</type>
</CustomField>