force-app/main/default/objects/Lead_Class_Scoring__c/fields/Paid_Search_Campaign_List__c.field-meta.xml
<CustomField>
    <fullName>Paid_Search_Campaign_List__c</fullName>
    <label>Paid Search Campaign List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>