force-app/main/default/objects/Lead_Class_Scoring__c/fields/Pincode_and_Signup_Source_List__c.field-meta.xml
<CustomField>
    <fullName>Pincode_and_Signup_Source_List__c</fullName>
    <label>Pincode and Signup Source List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>