force-app/main/default/objects/Lead_Class_Scoring__c/fields/Pincode_List__c.field-meta.xml
<CustomField>
    <fullName>Pincode_List__c</fullName>
    <label>Pincode List</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>