force-app/main/default/objects/Lead_Class_Scoring__c/fields/PostalCode_Score__c.field-meta.xml
<CustomField>
    <fullName>PostalCode_Score__c</fullName>
    <label>PostalCode Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>