force-app/main/default/objects/Lead_Class_Scoring__c/fields/PreAppointment_Lead_Source_List__c.field-meta.xml
<CustomField>
    <fullName>PreAppointment_Lead_Source_List__c</fullName>
    <label>PreAppointment Lead Source List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>google seo</fullName>
            </value>
            <value>
                <fullName>instagram</fullName>
            </value>
            <value>
                <fullName>bing</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Facebook Ad</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Taboola</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>discovery</fullName>
            </value>
            <value>
                <fullName>local</fullName>
            </value>
            <value>
                <fullName>HomeBliss_FB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>