force-app/main/default/objects/Lead_Class_Scoring__c/fields/PreAppointment_Lead_Source_OTPList__c.field-meta.xml
<CustomField>
    <fullName>PreAppointment_Lead_Source_OTPList__c</fullName>
    <label>PreAppointment Lead Source  OTPList</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Facebook Ad</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>