force-app/main/default/objects/Lead_Class_Scoring__c/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <label>Preference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>