force-app/main/default/objects/Lead_Class_Scoring__c/fields/Purpose_Counter_Limit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Counter_Limit__c</fullName>
    <label>Purpose Counter Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>