force-app/main/default/objects/Lead_Class_Scoring__c/fields/Red_Pincode_Counter__c.field-meta.xml
<CustomField>
    <fullName>Red_Pincode_Counter__c</fullName>
    <label>Red Pincode Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>