force-app/main/default/objects/Lead_Class_Scoring__c/fields/Score_Group__c.field-meta.xml
<CustomField>
    <fullName>Score_Group__c</fullName>
    <label>Score Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>