force-app/main/default/objects/Lead_Class_Scoring__c/fields/SignUp_Source__c.field-meta.xml
<CustomField>
    <fullName>SignUp_Source__c</fullName>
    <label>SignUp Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>