force-app/main/default/objects/Lead_Class_Scoring__c/fields/Signup_Source_List__c.field-meta.xml
<CustomField>
    <fullName>Signup_Source_List__c</fullName>
    <label>Signup Source List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimate Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>