force-app/main/default/objects/Lead_Class_Scoring__c/fields/SignUp_Source_Score__c.field-meta.xml
<CustomField>
    <fullName>SignUp_Source_Score__c</fullName>
    <label>SignUp Source Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>