force-app/main/default/objects/Lead_Class_Scoring__c/fields/Squad_IQ_Daily_Leads_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Squad_IQ_Daily_Leads_Assigned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Squad IQ Daily Leads Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>