force-app/main/default/objects/Lead_Class_Scoring__c/fields/Squad_IQ_daily_Leads_Limit__c.field-meta.xml
<CustomField>
    <fullName>Squad_IQ_daily_Leads_Limit__c</fullName>
    <defaultValue>150</defaultValue>
    <label>Squad IQ daily Leads Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>