force-app/main/default/objects/Lead_Class_Scoring__c/fields/SquadIQ_Cities__c.field-meta.xml
<CustomField>
    <fullName>SquadIQ_Cities__c</fullName>
    <label>SquadIQ Cities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Gurgaon</fullName>
            </value>
            <value>
                <fullName>New Delhi</fullName>
            </value>
            <value>
                <fullName>Noida</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>