force-app/main/default/objects/Lead_Class_Scoring__c/fields/SquadIQ_Excluded_Cities__c.field-meta.xml
<CustomField>
    <fullName>SquadIQ_Excluded_Cities__c</fullName>
    <label>SquadIQ Excluded Cities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Bhubaneswar</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Faridabad</fullName>
            </value>
            <value>
                <fullName>Ghaziabad</fullName>
            </value>
            <value>
                <fullName>Gurgaon</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Kochi</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>Mangalore</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
            <value>
                <fullName>New Delhi</fullName>
            </value>
            <value>
                <fullName>Noida</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Ranchi</fullName>
            </value>
            <value>
                <fullName>Surat</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Visakhapatnam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>