force-app/main/default/objects/Lead_Class_Scoring__c/fields/SquadIQ_SignUp_Sources__c.field-meta.xml
<CustomField>
    <fullName>SquadIQ_SignUp_Sources__c</fullName>
    <label>SquadIQ SignUp Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Estimate Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>