force-app/main/default/objects/Lead_Class_Scoring__c/fields/SquadIQ_Total_Leads_Assigned__c.field-meta.xml
<CustomField>
    <fullName>SquadIQ_Total_Leads_Assigned__c</fullName>
    <label>SquadIQ Total Leads Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>