force-app/main/default/objects/Lead_Class_Scoring__c/fields/Threashold_SquadIQ_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Threashold_SquadIQ_Lead_Score__c</fullName>
    <label>Threashold SquadIQ Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>