force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/Bronze_Plus_Score_Leads.recordType-meta.xml
<RecordType>
    <fullName>Bronze_Plus_Score_Leads</fullName>
    <active>true</active>
    <label>Bronze Plus Score Leads</label>
</RecordType>