force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/Gold_Score_Leads.recordType-meta.xml
<RecordType>
    <fullName>Gold_Score_Leads</fullName>
    <active>true</active>
    <label>Gold Score Leads</label>
</RecordType>