force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/Lead_Quality_and_IM_Preference.recordType-meta.xml
<RecordType>
    <fullName>Lead_Quality_and_IM_Preference</fullName>
    <active>true</active>
    <label>Lead Quality and IM Preference</label>
</RecordType>