force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/Lead_Score_and_Group_Mapping.recordType-meta.xml
<RecordType>
    <fullName>Lead_Score_and_Group_Mapping</fullName>
    <active>true</active>
    <label>Lead Score and Group Mapping</label>
</RecordType>