force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/Lead_Source_Scoring.recordType-meta.xml
<RecordType>
    <fullName>Lead_Source_Scoring</fullName>
    <active>true</active>
    <label>Lead Source Scoring</label>
</RecordType>