force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/Lead_Verification_Status_Scoring.recordType-meta.xml
<RecordType>
    <fullName>Lead_Verification_Status_Scoring</fullName>
    <active>true</active>
    <label>Lead Verification Status Scoring</label>
</RecordType>