force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/Offline_Ads.recordType-meta.xml
<RecordType>
    <fullName>Offline_Ads</fullName>
    <active>true</active>
    <label>Offline Ads</label>
</RecordType>