force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/PostalCode_Scoring.recordType-meta.xml
<RecordType>
    <fullName>PostalCode_Scoring</fullName>
    <active>true</active>
    <label>PostalCode Scoring</label>
</RecordType>