force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/Routing_HL_Leads.recordType-meta.xml
<RecordType>
    <fullName>Routing_HL_Leads</fullName>
    <active>true</active>
    <label>Routing HL Leads</label>
</RecordType>