force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/SignUp_Source_Scoring.recordType-meta.xml
<RecordType>
    <fullName>SignUp_Source_Scoring</fullName>
    <active>true</active>
    <label>SignUp Source Scoring</label>
</RecordType>