force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/Silver_Minus_Score_Leads.recordType-meta.xml
<RecordType>
    <fullName>Silver_Minus_Score_Leads</fullName>
    <active>true</active>
    <label>Silver Minus Score Leads</label>
</RecordType>