force-app/main/default/objects/Lead_Class_Scoring__c/recordTypes/SquadIQ_Configs.recordType-meta.xml
<RecordType>
    <fullName>SquadIQ_Configs</fullName>
    <active>true</active>
    <label>SquadIQ Configs</label>
</RecordType>