force-app/main/default/objects/Lead_Class_Scoring__c/listViews/Lead_Score_and_Group_Mapping.listView-meta.xml
<ListView>
    <fullName>Lead_Score_and_Group_Mapping</fullName>
    <columns>NAME</columns>
    <columns>Lead_Score__c</columns>
    <columns>Score_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead_Class_Scoring__c.Lead_Score_and_Group_Mapping</value>
    </filters>
    <label>Lead Score and Group Mapping</label>
    <language>en_US</language>
</ListView>