force-app/main/default/objects/Lead_Class_Scoring__c/listViews/Lead_Verification_Scoring.listView-meta.xml
<ListView>
    <fullName>Lead_Verification_Scoring</fullName>
    <columns>NAME</columns>
    <columns>Lead_Verification_Status__c</columns>
    <columns>Lead_Verification_Status_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead_Class_Scoring__c.Lead_Verification_Status_Scoring</value>
    </filters>
    <label>Lead Verification Scoring</label>
    <language>en_US</language>
</ListView>