force-app/main/default/objects/Lead_Class_Scoring__c/listViews/PostalCode_Scoring.listView-meta.xml
<ListView>
    <fullName>PostalCode_Scoring</fullName>
    <columns>NAME</columns>
    <columns>PostalCode__c</columns>
    <columns>PostalCode_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead_Class_Scoring__c.PostalCode_Scoring</value>
    </filters>
    <label>PostalCode Scoring</label>
    <language>en_US</language>
</ListView>