force-app/main/default/objects/Lead_Class_Scoring__c/listViews/Squad_IQ_Config_Record.listView-meta.xml
<ListView>
    <fullName>Squad_IQ_Config_Record</fullName>
    <columns>NAME</columns>
    <columns>Squad_IQ_Daily_Leads_Assigned__c</columns>
    <columns>Squad_IQ_daily_Leads_Limit__c</columns>
    <columns>SquadIQ_Total_Leads_Assigned__c</columns>
    <columns>SquadIQ_Total_Leads_Limit__c</columns>
    <columns>SquadIQ_Excluded_Cities__c</columns>
    <columns>Threashold_SquadIQ_Lead_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead_Class_Scoring__c.SquadIQ_Configs</value>
    </filters>
    <label>Squad IQ Config Record</label>
    <language>en_US</language>
</ListView>